Estimate first/last event datestamps from gc log file create date.